# lion

./: .gitignore  .gitmodules  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  lion.cabal
.github/workflows/: haskell.yml
app/: Lion.hs
bios/: Bios.S  bios.S
formal/: Formal.hs  LionFV.hs
lib/Lion/: Alu.hs  Core.hs  Instruction.hs  Pipe.hs
lion-formal/: CHANGELOG.md  README.md  cabal.project  lion-formal.cabal
lion-formal/app/: Main.hs
lion-formal/src/: LionFV.hs
lion-metric/: README.md  cabal.project  lion-metric.cabal
lion-metric/app/: Main.hs
lion-metric/src/: Metric.hs
lion-soc/: CHANGELOG.md  README.md  Soc.pcf  cabal.project  lion-soc.cabal
lion-soc/app/: Boot.hs  Com.hs  Main.hs
lion-soc/bios/: bios.S  bios.linker
lion-soc/demo/: crt0.S  firmware.c  firmware.h  link.ld
lion-soc/demo/led/: led.c
lion-soc/src/: Bus.hs  Flash.hs  Soc.hs  Spi.hs  Spram.hs  Uart.hs
nix/: hix.nix
soc/: Lion.hs  Soc.pcf
soc/bios/: bios.linker
src/: Config.hs  Core.hs  Instruction.hs  LionFV.hs  Pipe.hs  Pipeline.hs  Rvfi.hs  Soc.hs  Types.hs
src/Lion/: Alu.hs  Config.hs  Core.hs  Instruction.hs  Pipe.hs  Rvfi.hs
src/Lion/Pipe/: Config.hs  Execute.hs  Instruction.hs  Memory.hs  Monad.hs
src/Lion/Util/: Clash.hs
