cabal-version:      2.4
name:               lion
version:            0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
author:             dopamane
maintainer:         dwc1295@gmail.com
copyright:          (c) 2021 David Cox
category:           Hardware
extra-source-files:
    CHANGELOG.md
    README.md

library
  exposed-modules: Core
                 , Rvfi
--                 , Soc
  other-modules:   Instruction
                 , Pipe
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: 
    base ^>= 4.14.1.0,
    Cabal,
    generic-monoid >= 0.1 && < 0.2,
    mtl,
    lens,
    ice40-prim >= 0.1 && < 0.2,
    clash-prelude >= 1.2.5 && < 1.4,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  ghc-options:
    -Wall -Werror -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
  default-extensions:
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MagicHash
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    RankNTypes
    TemplateHaskell
    TupleSections
    TypeFamilies
    TypeOperators
    ViewPatterns

--executable formal
--    main-is: Formal.hs
--    build-depends: base ^>= 4.14.1.0
--                 , clash-ghc
--                 , clash-prelude >= 1.2.5 && < 1.4
--                 , directory
--                 , ice40-prim >= 0.1 && < 0.2
--                 , shake
--                 , ghc-typelits-natnormalise
--                 , ghc-typelits-extra
--                 , ghc-typelits-knownnat
--    ghc-options:
--      -Wall -Werror -Wcompat
--      -haddock
--      -fplugin GHC.TypeLits.Extra.Solver
--      -fplugin GHC.TypeLits.Normalise
--      -fplugin GHC.TypeLits.KnownNat.Solver
--      -fexpose-all-unfoldings
--      -fno-worker-wrapper
--    hs-source-dirs: formal
--    default-language: Haskell2010
--    default-extensions: DataKinds
--                      , LambdaCase
--                      , TemplateHaskell
--                      , TypeOperators

--executable soc
--    main-is: Lion.hs
--    build-depends: base ^>= 4.14.1.0
--                 , bytestring
--                 , clash-ghc
--                 , clash-prelude >= 1.2.5 && < 1.4
--                 , ice40-prim
--                 , shake
--                 , ghc-typelits-natnormalise
--                 , ghc-typelits-extra
--                 , ghc-typelits-knownnat
--    ghc-options:
--      -Wall -Werror -Wcompat
--      -haddock
--      -fplugin GHC.TypeLits.Extra.Solver
--      -fplugin GHC.TypeLits.Normalise
--      -fplugin GHC.TypeLits.KnownNat.Solver
--      -fexpose-all-unfoldings
--      -fno-worker-wrapper
--    hs-source-dirs: soc
--    default-language: Haskell2010
--    default-extensions: DataKinds
--                      , LambdaCase
--                      , NoStarIsType
--                      , TemplateHaskell
--                      , TypeOperators
--                      , ViewPatterns
