cabal-version:      2.4
name:               lion
version:            0.4.0.0
synopsis:           RISC-V Core
description:        Lion is a formally verified, 5-stage pipeline [RISC-V](https://riscv.org) core. Lion targets the [VELDT FPGA development board](https://standardsemiconductor.com) and is written in Haskell using [Clash](https://clash-lang.org).
bug-reports:        https://github.com/standardsemiconductor/lion/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             dopamane <standard.semiconductor@gmail.com>
maintainer:         dopamane <standard.semiconductor@gmail.com>
copyright:          (c) 2021-2024 David Cox
category:           Hardware
extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
  type: git
  location: https://github.com/standardsemiconductor/lion

library
  exposed-modules: Lion.Core
                 , Lion.Rvfi
  other-modules:   Lion.Alu
                 , Lion.Instruction
                 , Lion.Pipe
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends: 
    base           >= 4.13  && < 4.17,
    generic-monoid >= 0.1   && < 0.2,
    mtl            >= 2.2   && < 2.3,
    lens           >= 4.19  && < 5.2,
    ice40-prim     >= 0.3   && < 0.3.1.4,
    clash-prelude  >= 1.2.5 && < 1.7,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  ghc-options:
    -Wall -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
  default-extensions:
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MagicHash
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoStarIsType
    PolyKinds
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
