cabal-version:      2.4
name:               lion-formal
version:            0.1.0.0
synopsis:           Lion formal verification
description:        Formal verification using riscv-formal.
bug-reports:        https://github.com/standardsemiconductor/lion/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dopamane <standard.semiconductor@gmail.com>
copyright:          (c) 2021-2023 David Cox
category:           Hardware
extra-source-files: CHANGELOG.md

library
  exposed-modules: LionFV
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base          >= 4.13 && < 4.21,
    clash-prelude >= 1.4  && < 1.9,
    lion          >= 0.4  && < 0.5,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  ghc-options:
    -Wall -Werror -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
  default-extensions:
    DataKinds
    LambdaCase
    NoImplicitPrelude
    TemplateHaskell
    TypeOperators

executable formal
    main-is:          Main.hs
    build-depends:    base
                    , clash-ghc
                    , directory
                    , shake
    hs-source-dirs:   app
    default-language: Haskell2010
