cabal-version:      2.4
name:               lion-soc
version:            0.1.0.0
synopsis:           Lion SoC
description:        System-on-Chip using Lion and targeting the VELDT FPGA development board.
bug-reports:        https://github.com/standardsemiconductor/lion/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dopamane <standard.semiconductor@gmail.com>
copyright:          (c) 2021 David Cox
category:           Hardware
extra-source-files: CHANGELOG.md

library
  exposed-modules: Soc
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base >= 4.13 && < 4.15,
    Cabal,
    clash-prelude >= 1.2.5 && < 1.4,
    lion >= 0.1 && < 0.2,
    ice40-prim >= 0.2 && < 0.3,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  ghc-options:
    -Wall -Werror -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
  default-extensions:
    DataKinds
    LambdaCase
    NoImplicitPrelude
    NoStarIsType
    ViewPatterns
    TemplateHaskell
    TypeOperators

executable soc
    main-is:          Main.hs
    build-depends:    base >= 4.13 && < 4.15
                    , bytestring
                    , clash-ghc
                    , shake
    hs-source-dirs:   app
    default-language: Haskell2010
