cabal-version:      2.4
name:               lion-soc
version:            0.1.0.0
synopsis:           Lion SoC
description:        System-on-Chip using Lion and targeting the VELDT FPGA development board.
bug-reports:        https://github.com/standardsemiconductor/lion/issues
license:            BSD-3-Clause
author:             dopamane
maintainer:         dopamane <standard.semiconductor@gmail.com>
copyright:          (c) 2021-2022 David Cox
category:           Hardware
extra-source-files: CHANGELOG.md

library
  exposed-modules: Soc
  other-modules:   Bus
                 , Uart
                 , Spram
                 , Spi
  hs-source-dirs: src
  default-language: Haskell2010
  build-depends:
    base           >= 4.13 && < 4.17,
    clash-prelude  >= 1.4 && < 1.6,
    generic-monoid >= 0.1 && < 0.2,
    ice40-prim     >= 0.3 && < 0.4,
    lens,
    lion           >= 0.3 && < 0.4,
    mtl            >= 2.2 && < 2.3,
    ghc-typelits-natnormalise,
    ghc-typelits-extra,
    ghc-typelits-knownnat
  ghc-options:
    -Wall -Werror -Wcompat
    -haddock
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.Normalise
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fexpose-all-unfoldings
    -fno-worker-wrapper
  default-extensions:
    BinaryLiterals
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    GADTs
    KindSignatures
    LambdaCase
    MagicHash
    NoImplicitPrelude
    NoStarIsType
    ViewPatterns
    TemplateHaskell
    TypeOperators

executable soc
    main-is:          Main.hs
    build-depends:    base
                    , bytestring
                    , clash-ghc
                    , shake
    hs-source-dirs:   app
    default-language: Haskell2010

executable com
    main-is:          Com.hs
    build-depends:    async      >= 2.2  && < 2.3
                    , base
                    , serialport >= 0.5  && < 0.6
    hs-source-dirs:   app
    default-extensions:
      LambdaCase
    default-language: Haskell2010
